--- a/styles/_variable.scss
+++ b/styles/_variable.scss
@@ -5,14 +5,11 @@ $font-m: $font-s * 1.5;
 $font-l: $font-s * 5;
 
 //color system
-$green: #43a047;
 $white: #ffffff;
-$pink: #ffc9c9;
-$darkgreen: #448d47;
-$gray: #f2f2f2;
 $black: #333333;
-$news-pink: #fffafa;
-$pagination-ping: #ffc9c9;
+$codio-blue: #537091;
+$codio-darkblue: #2a2f42;
+
 
 //font
 $font-family-base: "Ubuntu", "PingFangTC", "微軟正黑體", "sans-serif";
@@ -36,6 +33,3 @@ $border-radius-base: 25px;
 //box-shadow
 $box-shadow-base: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
 
-//banner-img
-$sol-banner-img: "../../assets/solBanner.png";
-$pro-banner-img: "../../assest/product.png";
