--- a/src/components/AppHeader/Dropdown/index.scss
+++ b/src/components/AppHeader/Dropdown/index.scss
@@ -2,7 +2,7 @@
   height: 60px;
   // width: 100px;
   user-select: none;
-  color: #ffffff;
+  color: $white;
   transition: all 0.5s;
   position: relative;
 }
@@ -12,7 +12,7 @@
   height: 100%;
   border: none;
   background: none;
-  color: #ffffff;
+  color: $white;
   font-size: 14px;
   font-weight: 500;
   outline: 0;
@@ -31,8 +31,8 @@
 }
 .Dropdown__tooltip {
   width: 130px;
-  background: #537091;
-  color: #ffffff;
+  background: $codio-blue;
+  color: $white;
   position: absolute;
   padding: 0;
   text-align: center;
@@ -52,7 +52,7 @@
       cursor: pointer;
       padding: 5px 20px;
       &:hover {
-        background: #000000;
+        background: $black;
       }
       &.active {
         cursor: pointer;
