--- a/src/components/AppHeader/index.scss
+++ b/src/components/AppHeader/index.scss
@@ -7,7 +7,7 @@
   z-index: 99;
   display: flex;
   align-items: center;
-  color: #ffffff;
+  color: $white;
 }
 
 .AppHeader__tablist {
@@ -29,11 +29,11 @@
     padding: 6px 12px;
     margin-right: 9.8px;
     cursor: pointer;
-    background: #537091;
+    background: $codio-blue;
     text-align: center;
     outline: 0;
     &[aria-selected="true"] {
-      background: #2a2f42;
+      background: $codio-darkblue;
     }
   }
 }
