--- a/src/components/AppHeader/index.scss
+++ b/src/components/AppHeader/index.scss
@@ -1,3 +1,4 @@
+@import "../../../styles/main.scss";
 .AppHeader {
   background: #383e55;
   height: 60px;
@@ -7,7 +8,7 @@
   z-index: 99;
   display: flex;
   align-items: center;
-  color: $white;
+  color: var($white);
 }
 
 .AppHeader__tablist {
