--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,5 +1,5 @@
-@import './_variable.scss';
-@import './_base.scss';
+@import "./_variable";
+@import "./_base";
 
 // Editor theme
-@import './one-dark.css';
+@import './one-dark.scss';
