--- a/src/components/Editors/index.scss
+++ b/src/components/Editors/index.scss
@@ -6,12 +6,12 @@
 }
 
 .react-tabs__tab-panel {
-  flex-basis: 60%;
-  width: 60%;
+  // flex-basis: 60%;
+  // width: 60%;
 }
 
 .result {
-  flex-basis: 40%;
+  // flex-basis: 40%;
   iframe {
     width: 100%;
     height: calc(100vh - 70px);
