create register page

--- a/src/components/TextInput/index.scss
+++ b/src/components/TextInput/index.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
-  padding: 15px 0;
+  // padding: 15px 0;
   
   input {
     min-height: 40px;
