--- a/src/pages/Register.scss
+++ b/src/pages/Register.scss
@@ -1,5 +1,5 @@
 @import '../../styles/main.scss';
-.Login {
+.Register {
   .AppContent {
     display: flex;
     flex-direction: row;
@@ -44,7 +44,7 @@
     box-sizing: border-box;
     padding: 50px 100px;
     .textinput {
-      padding: 15px 0;
+      padding: 5px 0;
     }
   }
   .photo-section {
