--- a/src/components/AppHeader/UserInfo/index.scss
+++ b/src/components/AppHeader/UserInfo/index.scss
@@ -5,6 +5,7 @@
   align-items: center;
   padding: 30px;
   box-sizing: border-box;
+  cursor: pointer;
   img {
     user-select: none;
     -webkit-user-drag: none;
