--- a/src/components/TextInput/index.scss
+++ b/src/components/TextInput/index.scss
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
-  // padding: 15px 0;
+  transition: all .5s;
+  position: relative;
   
   input {
     min-height: 40px;
@@ -38,6 +39,54 @@
         line-height: 1.35;
         letter-spacing: 1;
         text-align: left;
+      }
+    }
+  }
+
+  &.error {
+    input {
+      border: solid 1px #ec5252;
+      padding-right: 250px;
+    }
+    .textinput__hint {
+      position: absolute;
+      top: 47px;
+      right: 15px;
+      font-size: 12px;
+      margin: 5px 0;
+      color: #ec5252;
+      .hinttext {
+        vertical-align: middle;
+      }
+      svg {
+        width: 20px;
+        height: 20px;
+        vertical-align: middle;
+        margin-left: 10px;
+      }
+    }
+  }
+
+  &.ok {
+    input {
+      border: solid 1px #6cd073;
+      padding-right: 50px;
+    }
+    .textinput__hint {
+      position: absolute;
+      top: 47px;
+      right: 15px;
+      font-size: 14px;
+      margin: 5px 0;
+      color: #6cd073;
+      .hinttext {
+        vertical-align: middle;
+      }
+      svg {
+        width: 20px;
+        height: 20px;
+        vertical-align: middle;
+        margin-left: 10px;
       }
     }
   }
