--- a/styles/_variable.scss
+++ b/styles/_variable.scss
@@ -30,3 +30,11 @@ $border-radius-base: 25px;
 
 //box-shadow
 $box-shadow-base: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
+
+
+//modal
+$modal-border-radius: 10px;
+$modal-box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
+$modal-title-font-size: 24px;
+$modal-title-color: #000000;
+$modal-header-background-color: #f5f7fb;
