--- a/src/components/TextInput/index.scss
+++ b/src/components/TextInput/index.scss
@@ -24,6 +24,9 @@
     &:disabled {
       background-color: #e4e4e4;
     }
+    &::placeholder {
+      color: #e4e4e4;
+    }
   }
 
   &.required {
