--- a/src/components/TextInput/index.scss
+++ b/src/components/TextInput/index.scss
@@ -53,7 +53,7 @@
     }
     .textinput__hint {
       position: absolute;
-      top: 47px;
+      top: calc(100% / 2);
       right: 15px;
       font-size: 12px;
       margin: 5px 0;
@@ -77,10 +77,10 @@
     }
     .textinput__hint {
       position: absolute;
-      top: 47px;
+      top: calc(100% / 2);
       right: 15px;
       font-size: 14px;
-      margin: 5px 0;
+      margin: 3px 0;
       color: #6cd073;
       .hinttext {
         vertical-align: middle;
@@ -105,4 +105,15 @@
   text-align: left;
   color: #263238;
   margin-bottom: 7px;
+}
+
+.textinput__icon {
+  position: absolute;
+  top: calc(100% / 2);
+  right: 15px;
+  svg {
+    width: 18px;
+    height: 18px;
+    color: #ec5252;
+  }
 }
