--- a/src/components/MultiSelect/index.scss
+++ b/src/components/MultiSelect/index.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   transition: all 0.5s;
+  position: relative;
 }
 
 .MultiSelect__input-container {
@@ -80,6 +81,10 @@
   margin: 5px 0 0;
   max-height: 100px;
   overflow-y: scroll;
+  position: absolute;
+  z-index: 200;
+  top: 100%;
+  width: 100%;
   li {
     font-size: 14px;
     padding: 4px 10px;
