--- a/src/pages/CreateProject.scss
+++ b/src/pages/CreateProject.scss
@@ -18,12 +18,59 @@
     border-right: 1px solid #e4e4e4;
   }
   .createProjectForm__template {
+    display: flex;
+    flex-direction: column;
     flex: 1;
-    padding: 20px 50px 50px;
+    padding: 20px 50px 10px;
   }
   p.createProjectForm__information__title,
   p.createProjectForm__template__title {
     color: #000000;
     margin: 20px 0 30px;
+  }
+  .createProjectForm__template__option {
+    display: flex;
+    align-items: center;
+    color: #000000;
+    padding: 8px 0px;
+    span.optionText {
+      width: 100%;
+      margin-left: 20px;
+      padding: 8px 20px;
+      border-radius: 10px;
+      display: flex;
+      align-items: center;
+      box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
+      background-color: #ffffff;
+      img {
+        padding: 2.5px;
+        width: 25px;
+        height: 25px;
+        position: absolute;
+        z-index: 2;
+      }
+      .iconBackground {
+        width: 30px;
+        height: 30px;
+        margin-right: 10px;
+        border-radius: 3px;
+        &.bootstrap {
+          background-color: rgba(113, 82, 162, 0.7);
+        }
+        &.html {
+          background-color: rgba(241, 101, 41, 0.7);
+        }
+      }
+    }
+  }
+  .createProjectForm__template__button-group {
+    display: flex;
+    justify-content: space-around;
+    margin-top: auto;
+    button {
+      width: 150px;
+      height: 40px;
+      font-size: 14px;
+    }
   }
 }
