--- a/src/components/AppHeader/index.scss
+++ b/src/components/AppHeader/index.scss
@@ -8,7 +8,7 @@
   z-index: 99;
   display: flex;
   align-items: center;
-  color: var($white);
+  color: $white;
 }
 
 .AppHeader__tablist {
@@ -17,6 +17,8 @@
   align-items: flex-end;
   margin: 0;
   overflow: hidden;
+  font-size: 14px;
+  line-height: 1.8;
   li {
     height: 25px;
     min-width: 50px;
