--- a/src/components/Editors/Dropdown/index.scss
+++ b/src/components/Editors/Dropdown/index.scss
@@ -1,7 +1,5 @@
 @import "../../../../styles/main.scss";
 .Dropdown {
-  height: 60px;
-  // width: 100px;
   user-select: none;
   color: $white;
   transition: all 0.5s;
@@ -9,25 +7,21 @@
 }
 .Dropdown__button {
   cursor: pointer;
-  width: 100%;
-  height: 100%;
   border: none;
-  background: none;
+  padding: 2px 5px;
+  background: $codio-blue;
   color: $white;
-  font-size: 14px;
-  font-weight: 500;
+  font-size: 8px;
   outline: 0;
-  padding: 20px 20px 0px;
   box-sizing: border-box;
+  border-radius: 3px;
   text-align: left;
   display: flex;
   align-items: center;
   justify-content: center;
-  .Dropdown__button__icon {
-    width: 20px;
-    height: 20px;
-    vertical-align: middle;
-    margin-right: 10px;
+  svg {
+    width: 10px;
+    height: 10px;
   }
 }
 .Dropdown__tooltip {
@@ -45,7 +39,7 @@
   font-stretch: normal;
   line-height: 1.2;
   letter-spacing: normal;
-  margin-top: 2px;
+  margin-top: 18px;
   .Dropdown__tooltip__list {
     list-style: none;
     padding: 0;
