--- a/src/components/TextInput/index.scss
+++ b/src/components/TextInput/index.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
-  transition: all .5s;
+  transition: all 0.5s;
   position: relative;
 
   input {
@@ -19,7 +19,7 @@
     color: rgba(0, 0, 0, 0.65);
     position: relative;
     margin: 0;
-    transition: all .5s;
+    transition: all 0.5s;
     color: black;
 
     &:focus {
@@ -133,4 +133,15 @@
     height: 18px;
     color: $white;
   }
+}
+
+.textinput__postBtn {
+  position: absolute;
+  width: 70px !important;
+  top: 0 !important;
+  margin: 0 !important;
+  height: 40px !important;
+  border-radius: 0 5px 5px 0 !important;
+  right: 0 !important;
+  font-size: 12px !important;
 }
