導入storybook & Search page carousel

--- a/src/components/ProjectCard/index.scss
+++ b/src/components/ProjectCard/index.scss
@@ -8,6 +8,8 @@
   display: inline-block;
   margin: 0 20px;
   position: relative;
+  cursor: pointer;
+  margin-top: 15px;
   .ProjectCard__container {
     overflow: hidden;
     width: 100%;
