--- a/src/components/Button/index.scss
+++ b/src/components/Button/index.scss
@@ -157,8 +157,11 @@ button {
     width: 30px;
     height: 30px;
     border-radius: 3px;
-    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
-    border: none;
-
+    border: 1px solid $gray;
+    transition: all .5s;
+    &:focus{
+      box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
+      border:none;
+    }
   }
 }
