--- a/src/components/Select/index.scss
+++ b/src/components/Select/index.scss
@@ -34,12 +34,11 @@
   width: 100%;
   height: 40px;
   border-radius: 5px;
-  border: solid 1px $gray;
-  background-color: $white;
+  background-color: #f7f7f7;
   position: relative;
   background-image: url(../../assets/angle-down-solid.svg);
   background-repeat: no-repeat;
-  background-position: 160px 10px;
+  background-position: 30px 17px;
 
   .custom-select-value {
     font-size: 14px;
@@ -50,7 +49,7 @@
   }
 
   select {
-    width: 200px;
+    width: 100px;
     height: 40px;
     position: absolute;
     top: 0;
