--- a/src/components/UserList/index.scss
+++ b/src/components/UserList/index.scss
@@ -3,12 +3,16 @@
   flex-direction: row;
   width: 40%;
   margin: 0 auto;
-
+  align-items: center;
+  .user_img{
+    margin-right: 10px;
+  }
   .user_name {
     flex-direction: column;
 
     h5 {
       font-size: 18px;
+      margin: 0;
     }
 
     .user_type {
