loadmore button in search page

--- a/src/pages/Search.scss
+++ b/src/pages/Search.scss
@@ -66,4 +66,8 @@
     width: 80%;
     position: unset !important;
   }
+  .loadmore_btn_wrapper {
+    text-align: center;
+    padding: 30px;
+  }
 }
