--- a/src/pages/ForgetPassword/ForgetPassword.scss
+++ b/src/pages/ForgetPassword/ForgetPassword.scss
@@ -1,9 +1,33 @@
-@import '../../styles/main.scss';
-.Register {
+.Modal__content {
+  p {
+    color: #ec5252;
+  }
+  .textinput {
+    margin: 40px 0;
+  }
+}
+
+@import '../../../styles/main.scss';
+.ForgetPassword {
   .AppContent {
     display: flex;
     flex-direction: row;
     height: calc(100vh - 60px);
+  }
+  .error-message {
+    color: #ec5252;
+    border-radius: 5px;
+    background-color: #fcd7d7;
+    padding: 10px;
+    line-height: 1.33;
+    font-size: 14px;
+    margin: 0 0 5px;
+    svg {
+      width: 15px;
+      height: 15px;
+      vertical-align: middle;
+      margin: 0 5px;
+    }
   }
   .title {
     font-size: 24px;
@@ -25,15 +49,9 @@
     line-height: 1.2;
     letter-spacing: normal;
     text-align: left;
-    color: #000000;
+    color: #ec5252;
     box-sizing: border-box;
     padding: 0 0 20px;
-    a {
-      color: #ec5252;
-      text-decoration: none;
-      font-weight: bold;
-      margin-left: 10px;
-    }
   }
   .form-section {
     display: flex;
@@ -42,7 +60,7 @@
     width: 50%;
     background: $white;
     box-sizing: border-box;
-    padding: 20px 100px 50px;
+    padding: 10px 100px 50px;
     .textinput {
       padding: 10px 0;
     }
@@ -55,13 +73,7 @@
     background-position: right;
     background-position-x: -200px;
   }
-  .login_btn {
+  .submit_btn {
     margin-top: auto !important;
-  }
-  .next_btn {
-    width: 100%;
-    text-align: right;
-    font-size: 18px;
-    margin: 10px 0;
   }
 }
