--- a/src/pages/Index/index.scss
+++ b/src/pages/Index/index.scss
@@ -1,4 +1,4 @@
-@import "../../styles/main.scss";
+@import "../../../styles/main.scss";
 body {
   margin: 0 auto;
   background-color: $codio-darkblue;
