--- a/src/components/Resizer/index.scss
+++ b/src/components/Resizer/index.scss
@@ -5,7 +5,7 @@
   position: absolute;
   top: 0;
   // right: 0;
-  background: white;
+  // background: white;
   width: 15px;
   height: 100%;
   cursor: col-resize;
