--- a/src/components/Resizer/index.scss
+++ b/src/components/Resizer/index.scss
@@ -3,11 +3,19 @@
 }
 .handle {
   position: absolute;
-  top: 0;
-  // right: 0;
-  // background: white;
-  width: 15px;
-  height: 100%;
+  top: 60px;
+  width: 18px;
+  height: calc(100% - 70px);
   cursor: col-resize;
   z-index: 999;
+}
+
+.drag-overlay {
+  position: absolute;
+  z-index: 1000;
+  width: 100%;
+  height: 100%;
+  cursor: col-resize;
+  opacity: 0;
+  // pointer-events: ;
 }
