--- a/src/pages/Admin.scss
+++ b/src/pages/Admin.scss
@@ -5,11 +5,11 @@
 
   .main_section {
     position: absolute;
-    bottom: 0;
+    top: 25%;
     left: 6%;
     background-color: white;
     width: 50%;
-    height: 80%;
+    // height: 80%;
     justify-content: center;
     border-radius: 10px 10px 0 0;
     box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
