--- a/src/components/TextInput/index.scss
+++ b/src/components/TextInput/index.scss
@@ -115,7 +115,7 @@
   line-height: 1.14;
   letter-spacing: normal;
   text-align: left;
-  color: $black;
+  color: $dark-gray;
   margin-bottom: 7px;
 }
 
