--- a/src/pages/HomePage.scss
+++ b/src/pages/HomePage.scss
@@ -25,11 +25,10 @@
 
 .main_section {
   position: absolute;
-  bottom: 0;
+  top:10%;
   left: 6%;
   background-color: white;
   width: 50%;
-  height: 60%;
   justify-content: center;
   border-radius: 10px 10px 0 0;
   box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
