--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -1,20 +1,20 @@
 @import '../../../styles/main.scss';
 
 .Layout {
-  width: 1920px;
-  display: flex;
+  width: 100%;
 
   .Layout__sidebar {
     background-color: $codio-darkblue;
     color: $white;
-    width: 10%;
+    width: 15%;
     flex-direction: column;
     text-align: center;
+    position: fixed;
 
     .logo {
       margin: auto;
-      width: 40%;
-      height: 15%;
+      width: 100px;
+      height: 80px;
       background-repeat: no-repeat;
     }
 
@@ -50,8 +50,8 @@
   }
 
   .Layout__content {
-    width: 90%;
     background-color: $background-color;
-    position: relative;
+    width: 85%;
+    float:right;
   }
 }
