--- a/src/components/TextInput/index.scss
+++ b/src/components/TextInput/index.scss
@@ -55,7 +55,7 @@
   &.error {
     input {
       border: solid 1px $codio-pink;
-      padding-right: 250px;
+      // padding-right: 250px;
     }
 
     .textinput__hint {
