--- a/src/pages/Admin/index.scss
+++ b/src/pages/Admin/index.scss
@@ -4,18 +4,15 @@
   color: $black;
 
   .main_section {
-    position: absolute;
-    top: 25%;
-    left: 6%;
+    width: 70%;
+    margin: 100px auto 0 auto;
     background-color: white;
-    width: 50%;
-    // height: 80%;
-    justify-content: center;
     border-radius: 10px 10px 0 0;
     box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
     padding: 20px;
-
+    position: relative;
   }
+
 
   .Modal__wrapper {
     width: 60%;
@@ -47,14 +44,13 @@
   }
 
   .add_user {
-    display: flex;
-    justify-content: space-around;
+    width: 74%;
+    margin: 0 auto;
 
     .add_user_btn {
-      width: 6%;
-      position: absolute;
-      right: 42%;
-      top: 3%;
+      width: 12%;
+      float: right;
+      margin-top:3%;
     }
   }
 
