--- a/src/components/Select/index.scss
+++ b/src/components/Select/index.scss
@@ -34,7 +34,7 @@
   width: 100%;
   height: 40px;
   border-radius: 5px;
-  background-color: #f7f7f7;
+  border: 1px solid #e4e4e4;
   position: relative;
   background-image: url(../../assets/angle-down-solid.svg);
   background-repeat: no-repeat;
