--- a/src/pages/EditResume/index.scss
+++ b/src/pages/EditResume/index.scss
@@ -1,14 +1,9 @@
 .editResume {
   .main_section {
-    width: 70%;
-    margin: 50px auto 0 auto;
-    background-color: white;
-    border-radius: 10px 10px 0 0;
-    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
-    padding: 20px;
+    padding-bottom: 0px;
   }
 
-  .textinput {
+  .textinput,.select {
     padding: 10px 0;
   }
 
