--- a/src/pages/Settings/index.scss
+++ b/src/pages/Settings/index.scss
@@ -1,4 +1,8 @@
 .settings {
+  .main_section {
+    padding-bottom: 0px;
+  }
+  
   .textinput {
     padding: 10px 0;
   }
@@ -7,15 +11,6 @@
     font-size: 22px;
     font-weight: normal;
     color: #263238;
-  }
-
-  .main_section {
-    width: 70%;
-    margin: 50px auto 0 auto;
-    background-color: white;
-    border-radius: 10px 10px 0 0;
-    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
-    padding: 20px;
   }
 
   .edit_info {
