--- a/src/components/TextArea/index.scss
+++ b/src/components/TextArea/index.scss
@@ -12,7 +12,7 @@
     outline: 0;
     line-height: 2.2;
     max-width: 50vw;
-    max-height: 80px;
+    // max-height: 80px;
     box-sizing: border-box;
     padding: 4px 11px;
     color: rgba(0, 0, 0, 0.65);
