--- a/styles/_variable.scss
+++ b/styles/_variable.scss
@@ -9,6 +9,7 @@ $black: #333333;
 $gray:#e4e4e4;
 $light-gray:#f7f7f7;
 $dark-gray:#707070;
+$light-blue: #E8F0FB;
 $blue:#3597ec;
 $green:#6cd073;
 $pink:#ffe0e0;
