fix some style issue in portfolio page

--- a/src/components/ArticleEditors/index.scss
+++ b/src/components/ArticleEditors/index.scss
@@ -3,7 +3,7 @@
 .ArticleEditor {
   display: flex;
   flex-direction: row;
-  margin: 0 !important;
+  margin: 12px 0 !important;
 
   &:hover {
     .add_content_btn {
