調整元件樣式

--- a/src/components/LayoutBtn/index.scss
+++ b/src/components/LayoutBtn/index.scss
@@ -1,4 +1,9 @@
 .main_section_btn {
   width: 74%;
   margin: 40px auto 0 auto;
+
+  .layoutBtn {
+    display: flex;
+    flex-direction: row-reverse;
+  }
 }
