--- a/src/components/Button/index.scss
+++ b/src/components/Button/index.scss
@@ -135,7 +135,7 @@ button {
     height: 30px;
     border-radius: 5px;
     font-size: 14px;
-    margin: 10px 0;
+    margin-bottom: 10px;
   }
 
   &.small {
@@ -143,7 +143,7 @@ button {
     height: 45px;
     border-radius: 10px;
     font-size: 18px;
-    margin: 10px 0;
+    margin-bottom: 10px;
   }
   
   &.large {
@@ -151,18 +151,18 @@ button {
     height: 55px;
     border-radius: 10px;
     font-size: 24px;
-    margin: 10px 0;
+    margin-bottom: 10px;
   }
 
   &.shape_square {
-    width: 30px;
-    height: 30px;
-    border-radius: 3px;
+    width: 40px;
+    height: 40px;
+    border-radius: 5px;
     border: 1px solid $gray;
     box-sizing: border-box;
     padding: 5px;
     transition: all .5s;
-    &:focus {
+    &:focus, &:active, &:hover {
       box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
       border:none;
     }
