--- a/src/components/Filter/index.scss
+++ b/src/components/Filter/index.scss
@@ -1,19 +1,21 @@
 @import '../../../styles/main.scss';
 
-.filter_btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.filter {
     position: relative;
-}
+    .filter_btn {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
-.filter_dropDown {
-    position: absolute;
-    right: 18px;
-    width: 100px;
-    background-color: $white;
-    border-radius: 10px;
-    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
-    padding: 10px;
-    z-index: 99;
+    .filter_dropDown {
+        position: absolute;
+        right: 0px;
+        width: 100px;
+        background-color: $white;
+        border-radius: 10px;
+        box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
+        padding: 10px;
+        z-index: 99;
+    }
 }
