--- a/src/components/ResumeBtn/index.scss
+++ b/src/components/ResumeBtn/index.scss
@@ -1,19 +1,22 @@
 @import '../../../styles/main.scss';
 
-.resumeBtn_btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.resumeBtn {
+    width:10%;
     position: relative;
-}
+    margin-right: 10px;
+    .resumeBtn_btn {
+        width:100%;
+        background-color: transparent;  
+    }
 
-.resumeBtn_dropDown {
-    position: absolute;
-    right: 18px;
-    width: 100px;
-    background-color: $white;
-    border-radius: 10px;
-    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
-    padding: 10px;
-    z-index: 99;
+    .resumeBtn_dropDown {
+        position: absolute;
+        right: 0px;
+        width: 100px;
+        background-color: $white;
+        border-radius: 10px;
+        box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
+        padding: 10px;
+        z-index: 99;
+    }
 }
