--- a/src/components/Select/index.scss
+++ b/src/components/Select/index.scss
@@ -1,66 +1,87 @@
 @import '../../../styles/main.scss';
 
-.select{
-  margin: 0 3px;
-}
-.select-title {
-  font-size: 7px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 1.14;
-  letter-spacing: normal;
-  text-align: left;
-  color: $black;
-  margin-bottom: 7px;
+.select {
+  margin: 20px 0;
+  width: 100%;
+  .select_title {
+    font-size: 7px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.14;
+    letter-spacing: normal;
+    text-align: left;
+    color: $black;
+    margin-bottom: 7px;
 
-  &.required {
-    &::after {
-      content: '*';
-      color: $codio-pink;
-      font-size: 15px;
-      padding: 0 5px;
-      font-weight: normal;
-      font-style: normal;
-      font-stretch: normal;
-      line-height: 1.35;
-      letter-spacing: 1;
-      text-align: left;
+    &.required {
+      &::after {
+        content: '*';
+        color: $codio-pink;
+        font-size: 15px;
+        padding: 0 5px;
+        font-weight: normal;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.35;
+        letter-spacing: 1;
+        text-align: left;
+      }
     }
   }
-}
 
-.custom-select {
-  width: 100%;
-  height: 40px;
-  border-radius: 5px;
-  border: 1px solid #e4e4e4;
-  position: relative;
-  background-image: url(../../assets/angle-down-solid.svg);
-  background-repeat: no-repeat;
-  background-position: 30px 17px;
-
-  .custom-select-value {
-    font-size: 14px;
-    line-height: 40px;
-    color: $black;
-    box-sizing: border-box;
-    padding: 0 10px;
-  }
-
-  select {
-    width: 100px;
+  .select_input {
+    width: 100%;
     height: 40px;
-    position: absolute;
-    top: 0;
-    opacity: 0;
-    display: block;
-    border: 1px solid $black;
+    border-radius: 5px;
+    border: 1px solid #e4e4e4;
+    position: relative;
+    cursor: pointer;
+    color: black;
   }
 
-}
+  .select_value {
+    padding: 10px 10px;
+    display: block;
+  }
 
-.custom-select select {
-  display: none;
-  /*hide original SELECT element: */
+  .select＿icon {
+    position: absolute;
+    right: 5px;
+    top: calc(50% / 2);
+  }
+
+  .select_dropDown {
+    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
+    background-color: #ffffff;
+    color: #707070;
+    padding: 0;
+    list-style: none;
+    border-radius: 5px;
+    padding: 5px 0;
+    margin: 5px 0 0;
+    max-height: 100px;
+    overflow-y: scroll;
+    position: absolute;
+    z-index: 200;
+    top: 100%;
+    width: 100%;
+
+    li {
+      font-size: 14px;
+      padding: 4px 10px;
+      cursor: pointer;
+      transition: all 0.5s;
+
+      &:hover {
+        background: #e8f0fb;
+        color:$blue;
+      }
+
+      &:active {
+        background: #e8f0fb;
+        color:$blue;
+      }
+    }
+  }
 }
