--- a/src/components/UserInfo/index.scss
+++ b/src/components/UserInfo/index.scss
@@ -1,8 +1,9 @@
-// .user_profile {
-//   display: flex;
-//   flex-direction: row;
-//   margin-top: 50px;
-//   .user_img {
-//     margin-right:20px;
-//   }
-// }
+.user_profile {
+  .user_url {
+    cursor: pointer;
+    a{
+      color:black;
+      text-decoration: none;
+    }
+  }
+}
