--- a/src/pages/Admin/index.scss
+++ b/src/pages/Admin/index.scss
@@ -67,8 +67,13 @@
     margin-bottom: 80px;
 
     .display_number {
+      span{
       display: flex;
       align-items: baseline;
+    }
+      .select_title {
+        margin-bottom: 0px;
+      }
     }
 
     .filter_dropDown .filter_title {
@@ -76,6 +81,7 @@
     }
 
     .textinput__icon {
+      top:calc(25%/2);
       background-color: #ec5252;
       width: 30px;
       height: 30px;
